--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,4 +1,2 @@
 ---
-# vars file for ansible_role_logstash
-elasticsearch_url: localhost
-elasticsearch_port: 9200
+# defaults file for ansible-role-logstash
